Got rid of all the shows in the accordions

--- a/wiki/pages/education.html
+++ b/wiki/pages/education.html
@@ -495,7 +495,7 @@ We aspire to <b>foster mutual learning and dialogue</b>, laying the foundation f
             <b>Prakriya International School </b> (Date: 05/07/23)
           </button>
         </h2>
-        <div id="collapseNine" class="accordion-collapse collapse show" aria-labelledby="headingNine">
+        <div id="collapseNine" class="accordion-collapse collapse" aria-labelledby="headingNine">
           <div class="accordion-body">
             <p>During the session with the middle school students, we focused on addressing the topic of general
               pollutants in the environment. Additionally, we provided a concise overview of our project. The students
@@ -557,7 +557,7 @@ We aspire to <b>foster mutual learning and dialogue</b>, laying the foundation f
             <b>Sri Krishna Mandir, Hulimavu, Bangalore—Date: 05/07/2023</b><br>
           </button>
         </h2>
-        <div id="collapseEleven" class="accordion-collapse collapse show" aria-labelledby="headingEleven">
+        <div id="collapseEleven" class="accordion-collapse collapse" aria-labelledby="headingEleven">
           <div class="accordion-body">
             <p>Our team visited an underprivileged primary school to inspire students and cultivate their interest in
               science. Upon asking about their future aspirations, many students appeared uncertain or expressed a
@@ -706,7 +706,7 @@ We aspire to <b>foster mutual learning and dialogue</b>, laying the foundation f
             <b>Lab Safety and Security Session—Date: 14/09/23, 18/09/23, 19/09/23</b>
           </button>
         </h2>
-        <div id="collapseFifteen" class="accordion-collapse collapse show" aria-labelledby="headingFifteen">
+        <div id="collapseFifteen" class="accordion-collapse collapse " aria-labelledby="headingFifteen">
           <div class="accordion-body">
             <p>We organized a series of Lab Safety sessions to equip the second years of MIT Manipal pursuing a B.Tech
               in Biotechnology with valuable laboratory safety knowledge and hands-on experience. In order to ensure
@@ -914,7 +914,7 @@ We aspire to <b>foster mutual learning and dialogue</b>, laying the foundation f
             <b>The Rotary Club of Coimbatore Metropolis, Coimbatore— Date: 20/06/23</b>
           </button>
         </h2>
-        <div id="collapseEighteen" class="accordion-collapse collapse show" aria-labelledby="headingEighteen">
+        <div id="collapseEighteen" class="accordion-collapse collapse" aria-labelledby="headingEighteen">
           <div class="accordion-body">
             <p>Our Team Leader, Aditi Balasubramani, visited a meeting hosted by the Rotary Club of Coimbatore
               Metropolis. There, she gave a gist of the project and a basic overview of synthetic biology in a way
@@ -1056,7 +1056,7 @@ We aspire to <b>foster mutual learning and dialogue</b>, laying the foundation f
             <b>Bioremediation Conclave— Date: 07/09/23 to 09/09/23</b>
           </button>
         </h2>
-        <div id="collapseTwentyone" class="accordion-collapse collapse show" aria-labelledby="headingTwentyone">
+        <div id="collapseTwentyone" class="accordion-collapse collapse" aria-labelledby="headingTwentyone">
           <div class="accordion-body">
             <p>The Bioremediation Conclave hosted by iGEM MIT-MAHE in collaboration with iGEM IIT-Delhi was an
               initiative by both teams to promote synthetic biology in bioremediation. It was a <b>3-day event</b> where
