Changing drop down box

--- a/wiki/pages/experiments.html
+++ b/wiki/pages/experiments.html
@@ -41,7 +41,7 @@
                                         <b><u>TCC Detection: Preparation of Standards (Using Water as Solvent)</u></b>
                                       </button>
                                     </h2>
-                                    <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne">
+                                    <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne">
                                       <div class="accordion-body">
                                         <p class="sub-stuff"><h4><b>Objective:</b></h4>
                                           <p class="sub-stuff">To prepare a standard solution of Triclocarban (TCC) using water as the solvent.</p>
