Seeing if the alignment works

--- a/wiki/my-layout.html
+++ b/wiki/my-layout.html
@@ -34,7 +34,7 @@
       </div>
     </div>
 
-    <div class="banner flex-grow-1" style="flex:1">
+    <div class="banner flex-grow-1 p-3" style="flex:1">
       <!-- Page Header -->
       <header>
         <img src="https://static.igem.wiki/teams/4641/wiki/waves/wave-1.svg" />
