effect of acetonitrile pix

--- a/wiki/pages/engineering.html
+++ b/wiki/pages/engineering.html
@@ -257,27 +257,27 @@
             </p>
             <ol style="font-family: 'Poppins', sans-serif; font-size: 20px; color: #666;">
               <li>
-                Growth curve of <i>Pseudomonas putida</i> in the presence of acetonitrile
-                <img src="https://static.igem.wiki/teams/4641/wiki/dbtl-growth-curves/p-putida-acetonitrile.png"
-                  style="scale:0.4;">
+                Growth curve of <i>Pseudomonas putida</i> in the presence of acetonitrile <br>
+                <img style="width: 50%; height: auto;" src="https://static.igem.wiki/teams/4641/wiki/dbtl-growth-curves/p-putida-acetonitrile.png"
+                  class="img-responsive rounded mx-auto d-block mt-4">    
                 <br>
                 Inference: The presence of acetonitrile in the growth media does not affect the growth of
                 <i>Pseudomonas putida</i>.
               </li>
               <br><br>
               <li>
-                Growth curve of <i>Pseudomonas fluorescens</i> in presence of acetonitrile.
-                <img src="https://static.igem.wiki/teams/4641/wiki/dbtl-growth-curves/p-fluorescens-acetonitrile.png"
-                  style="scale:0.4;">
+                Growth curve of <i>Pseudomonas fluorescens</i> in presence of acetonitrile. <br>
+                <img style="width: 50%; height: auto;" src="https://static.igem.wiki/teams/4641/wiki/dbtl-growth-curves/p-fluorescens-acetonitrile.png"
+                  class="img-responsive rounded mx-auto d-block mt-4">
                 <br>
                 Inference: It was found that the presence of acetonitrile does not appreciably affect the growth of
                 <i>Pseudomonas fluorescens</i>.
               </li>
               <br><br>
               <li>
-                Growth curve of <i>Acinetobacter baylyi</i> in the presence of acetonitrile
-                <img src="https://static.igem.wiki/teams/4641/wiki/dbtl-growth-curves/a-baylyi-acetonitrile.png"
-                  style="scale:0.5;">
+                Growth curve of <i>Acinetobacter baylyi</i> in the presence of acetonitrile <br>
+                <img style="width: 50%; height: auto;" src="https://static.igem.wiki/teams/4641/wiki/dbtl-growth-curves/a-baylyi-acetonitrile.png"
+                  class="img-responsive rounded mx-auto d-block mt-4">
                 <br>
                 Inference: It was observed that acetonitrile affects the growth of <i>Acinetobacter baylyi</i> and
                 acts as an inhibitor.
