--- a/wiki/pages/engineering.html
+++ b/wiki/pages/engineering.html
@@ -258,7 +258,7 @@
             <ol style="font-family: 'Poppins', sans-serif; font-size: 20px; color: #666;">
               <li>
                 Growth curve of <i>Pseudomonas putida</i> in the presence of acetonitrile <br>
-                <img style="width: 50%; height: auto;" src="https://static.igem.wiki/teams/4641/wiki/dbtl-growth-curves/p-putida-acetonitrile.png"
+                <img style="width: 35%; height: auto;" src="https://static.igem.wiki/teams/4641/wiki/dbtl-growth-curves/p-putida-acetonitrile.png"
                   class="img-responsive rounded mx-auto d-block mt-4">    
                 <br>
                 Inference: The presence of acetonitrile in the growth media does not affect the growth of
@@ -267,7 +267,7 @@
               <br><br>
               <li>
                 Growth curve of <i>Pseudomonas fluorescens</i> in presence of acetonitrile. <br>
-                <img style="width: 50%; height: auto;" src="https://static.igem.wiki/teams/4641/wiki/dbtl-growth-curves/p-fluorescens-acetonitrile.png"
+                <img style="width: 35%; height: auto;" src="https://static.igem.wiki/teams/4641/wiki/dbtl-growth-curves/p-fluorescens-acetonitrile.png"
                   class="img-responsive rounded mx-auto d-block mt-4">
                 <br>
                 Inference: It was found that the presence of acetonitrile does not appreciably affect the growth of
@@ -276,7 +276,7 @@
               <br><br>
               <li>
                 Growth curve of <i>Acinetobacter baylyi</i> in the presence of acetonitrile <br>
-                <img style="width: 50%; height: auto;" src="https://static.igem.wiki/teams/4641/wiki/dbtl-growth-curves/a-baylyi-acetonitrile.png"
+                <img style="width: 35%; height: auto;" src="https://static.igem.wiki/teams/4641/wiki/dbtl-growth-curves/a-baylyi-acetonitrile.png"
                   class="img-responsive rounded mx-auto d-block mt-4">
                 <br>
                 Inference: It was observed that acetonitrile affects the growth of <i>Acinetobacter baylyi</i> and
@@ -301,26 +301,26 @@
           <div class="accordion-body">
             <ol style="font-family: 'Poppins', sans-serif; font-size: 20px; color: #666;">
               <li>
-                Growth curve of <i>Pseudomonas putida</i> at different pH values
-                <img src="https://static.igem.wiki/teams/4641/wiki/dbtl-growth-curves/p-putida-temp.png"
-                  style="scale:0.4;">
+                Growth curve of <i>Pseudomonas putida</i> at different pH values<br>
+                <img style="width: 35%; height: auto;" src="https://static.igem.wiki/teams/4641/wiki/dbtl-growth-curves/p-putida-temp.png"
+                  class="img-responsive rounded mx-auto d-block mt-4">
                 <br>
                 Inference: The presence of acetonitrile in the growth media does not affect the growth of
                 <i>Pseudomonas putida</i>.
               </li>
               <br><br>
               <li>
-                Growth curves of <i>Pseudomonas fluorescens</i> at different pH values
-                <img src="https://static.igem.wiki/teams/4641/wiki/dbtl-growth-curves/p-fluorescens-ph.png"
-                  style="scale:0.4;">
+                Growth curves of <i>Pseudomonas fluorescens</i> at different pH values<br>
+                <img style="width: 35%; height: auto;" src="https://static.igem.wiki/teams/4641/wiki/dbtl-growth-curves/p-fluorescens-ph.png"
+                  class="img-responsive rounded mx-auto d-block mt-4">
                 <br>
                 Inference: The optimal pH for growth of <i>Pseudomonas fluorescens</i> was observed to be pH 8.
               </li>
               <br><br>
               <li>
-                Growth curve of <i>Acinetobacter baylyi</i> at different pH values
-                <img src="https://static.igem.wiki/teams/4641/wiki/dbtl-growth-curves/a-baylyi-ph.png"
-                  style="scale:0.4;">
+                Growth curve of <i>Acinetobacter baylyi</i> at different pH values<br>
+                <img style="width: 35%; height: auto;" src="https://static.igem.wiki/teams/4641/wiki/dbtl-growth-curves/a-baylyi-ph.png"
+                  class="img-responsive rounded mx-auto d-block mt-4">
                 <br>
                 Inference: It was observed that the growth of <i>Acinetobacter baylyi</i> was not deterred by
                 variation in the pH. Thus we infer that it would thrive within this pH range typically found in
@@ -345,26 +345,26 @@
           <div class="accordion-body">
             <ol style="font-family: 'Poppins', sans-serif; font-size: 20px; color: #666;">
               <li>
-                Growth curve of <i>Pseudomonas putida</i> at 24° C and 37° C
-                <img src="https://static.igem.wiki/teams/4641/wiki/dbtl-growth-curves/p-putida-temp.png"
-                  style="scale:0.4;">
+                Growth curve of <i>Pseudomonas putida</i> at 24° C and 37° C<br>
+                <img style="width: 35%; height: auto;" src="https://static.igem.wiki/teams/4641/wiki/dbtl-growth-curves/p-putida-temp.png"
+                  class="img-responsive rounded mx-auto d-block mt-4">
                 <br>
                 Inference: It is observed that <i>Pseudomonas putida </i> exhibits superior growth at 24 degrees
                 Celsius, whereas its growth is adversely affected at 37 degrees Celsius.
               </li>
               <br><br>
               <li>
-                Growth curve of <i>Pseudomonas fluorescens</i> at 24° C and 30° C
-                <img src="https://static.igem.wiki/teams/4641/wiki/dbtl-growth-curves/p-fluorescens-temp.png"
-                  style="scale:0.4;">
+                Growth curve of <i>Pseudomonas fluorescens</i> at 24° C and 30° C <br>
+                <img style="width: 35%; height: auto;" src="https://static.igem.wiki/teams/4641/wiki/dbtl-growth-curves/p-fluorescens-temp.png"
+                  class="img-responsive rounded mx-auto d-block mt-4">
                 <br>
                 Inference: It was observed that <i>Pseudomonas fluorescens</i> exhibits better growth at 24° C.
               </li>
               <br><br>
               <li>
-                Growth curve of <i>Acinetobacter baylyi</i> at 30° C and 37° C
-                <img src="https://static.igem.wiki/teams/4641/wiki/dbtl-growth-curves/a-baylyi-temp.png"
-                  style="scale:0.4;">
+                Growth curve of <i>Acinetobacter baylyi</i> at 30° C and 37° C <br>
+                <img style="width: 35%; height: auto;" src="https://static.igem.wiki/teams/4641/wiki/dbtl-growth-curves/a-baylyi-temp.png"
+                  class="img-responsive rounded mx-auto d-block mt-4">
                 <br>
                 <!--Below inference needs to be changed-->
                 Inference: It was observed that the growth of <i>Acinetobacter baylyi</i> was not deterred by
@@ -391,27 +391,27 @@
           <div class="accordion-body">
             <ol style="font-family: 'Poppins', sans-serif; font-size: 20px; color: #666;">
               <li>
-                Growth curve of <i>Pseudomonas putida</i> at different concentrations of TCC (sludge concentration)
-                <img src="https://static.igem.wiki/teams/4641/wiki/dbtl-growth-curves/p-putida-tcc-sludge.png"
-                  style="scale:0.4;">
+                Growth curve of <i>Pseudomonas putida</i> at different concentrations of TCC (sludge concentration)<br>
+                <img style="width: 35%; height: auto;"  src="https://static.igem.wiki/teams/4641/wiki/dbtl-growth-curves/p-putida-tcc-sludge.png"
+                  class="img-responsive rounded mx-auto d-block mt-4">
                 <br>
                 Inference: Growth of <i>Pseudomonas putida</i> was stunted in the presence of TCC as compared to the
                 control.
               </li>
               <br><br>
               <li>
-                Growth curve of <i>Pseudomonas fluorescens</i> in the presence of TCC (sludge concentration)
-                <img src="https://static.igem.wiki/teams/4641/wiki/dbtl-growth-curves/p-fluorescens-tcc-sludge.png"
-                  style="scale:0.4;">
+                Growth curve of <i>Pseudomonas fluorescens</i> in the presence of TCC (sludge concentration)<br>
+                <img style="width: 35%; height: auto;"  src="https://static.igem.wiki/teams/4641/wiki/dbtl-growth-curves/p-fluorescens-tcc-sludge.png"
+                 class="img-responsive rounded mx-auto d-block mt-4">
                 <br>
                 Inference: It was observed that TCC did not deter the growth of <i>Pseudomonas fluorescens</i>.
               </li>
               <br><br>
               <li>
                 Growth curve of <i>Acinetobacter baylyi</i> in the presence of different concentrations of TCC (sludge
-                concentration)
-                <img src="https://static.igem.wiki/teams/4641/wiki/dbtl-growth-curves/a-baylyi-tcc-sludge.png"
-                  style="scale:0.4;">
+                concentration)<br>
+                <img style="width: 35%; height: auto;"  src="https://static.igem.wiki/teams/4641/wiki/dbtl-growth-curves/a-baylyi-tcc-sludge.png"
+                  class="img-responsive rounded mx-auto d-block mt-4">
                 <br>
                 <b>Inference:</b> Presence of TCC at such high concentrations does not inhibit the growth of
                 <i>Acinetobacter baylyi</i>. However, the TCC was dissolved in acetonitrile. Our final inference
