--- a/wiki/pages/engineering.html
+++ b/wiki/pages/engineering.html
@@ -541,7 +541,7 @@
       <br>
       The plasmid design is as below:
     </p>
-    <img src="" style="img-fluid">
+     <img style="width: 60%; height: auto;" src="https://static.igem.wiki/teams/4641/wiki/design-part-page/plasmid.png" class="img-responsive rounded mx-auto d-block mt-4">
 
     <p class="sub-stuff">
       <u>Genetic circuit design:</u><br><br>
@@ -549,10 +549,10 @@
       mechanisms that can be used to increase or decrease the expression or production of specific gene products.
     </p>
 
-    <img src="" style="img-fluid">
-    <p class="sub-stuff">
-      <b>Fig 1:</b>TccA Gene Regulation in <i>Escherichia coli</i>
-    </p>
+    <img style="width: 70%; height: auto;" src="https://static.igem.wiki/teams/4641/wiki/design-part-page/genetic-circuit.jpeg" class="img-responsive rounded mx-auto d-block mt-4">
+
+    <figcaption style="text-align:center"> <i> TccA Gene Regulation in Escherichia coli</i> </figcaption>
+   
 
     <p class="MAIN-STUFF"><u>Build:</u></p>
 
@@ -566,10 +566,9 @@
       transformed.
     </p>
     <!--(Insert image:  transformed plate in DH5alpha)-->
-    <img src="https://static.igem.wiki/teams/4641/wiki/dbtl-growth-curves/transformed-plate-in-dh5alpha.jpg"
-      style="img-fluid" style="scale:0.4;">
-    <p class="sub-stuff" style="text-align:center;">i(Transformed plate-contains tccA Gibson assembled pET22b+
-      transformed DH5alpha cells)</p>
+    <img style="width: 35%; height: auto;" src="https://static.igem.wiki/teams/4641/wiki/dbtl-growth-curves/transformed-plate-in-dh5alpha.jpg"
+      class="img-responsive rounded mx-auto d-block mt-4">
+    <figcaption style="text-align:center"> <i> i(Transformed plate-contains tccA Gibson assembled pET22b+ transformed DH5alpha cells) </i> </figcaption>
     <p class="sub-stuff">
       After a confirmatory colony PCR to check the presence of our insert, we transformed the Gibson-assembled plasmid
       into <i> E.coli BL21 </i> and then we moved towards expression studies.
@@ -583,11 +582,10 @@
       bands were not observed. This could have been due to the extended time for destaining.
     </p>
     <!--(insert image: SDS gel image)-->
-    <img src="https://static.igem.wiki/teams/4641/wiki/dbtl-growth-curves/sds-gel-image.png" style="img-fluid"
-      style="scale:0.6;">
-    <p class="sub-stuff" style="text-align:center;"><i>(SDS gel image- Lane 1,2,7,8 uninduced cells, Lane 3,4,9,10
-        induced cells and 5,6 ladder)</i></p>
-
+    <figure>
+    <img style="width: 35%; height: auto;" src="https://static.igem.wiki/teams/4641/wiki/dbtl-growth-curves/sds-gel-image.png" class="img-responsive rounded mx-auto d-block mt-4">
+    <figcaption style="text-align:center"> <i> Regular meetings held with the team members of IIT Delhi and MIT-MAHE to plan the 3-day bioremediation conclave </i> </figcaption>
+</figure>
     <p class="sub-stuff">
       <b><u>Genetic circuit</u></b><br><br>
       The genetic circuit represents the regulation of TccA gene in <i>E.coli</i>. Our gene, including RBS, is 1562
@@ -606,7 +604,7 @@
         </h4>
         <div id="collapse10" class="accordion-collapse collapse show" aria-labelledby="heading10">
           <div class="accordion-body">
-            <img src="" style="img-fluid">
+            <img style="width: 70%; height: auto;" src="https://static.igem.wiki/teams/4641/wiki/design-part-page/genetic-circuit.jpeg" class="img-responsive rounded mx-auto d-block mt-4">
             <table border="1" style="font-family: 'Poppins', sans-serif; font-size: 20px; color: #666;">
               <tr>
                 <th>Parameter</th>
