--- a/wiki/pages/engineering.html
+++ b/wiki/pages/engineering.html
@@ -541,7 +541,7 @@
       <br>
       The plasmid design is as below:
     </p>
-     <img style="width: 60%; height: auto;" src="https://static.igem.wiki/teams/4641/wiki/design-part-page/plasmid.png" class="img-responsive rounded mx-auto d-block mt-4">
+     <img style="width: 40%; height: auto;" src="https://static.igem.wiki/teams/4641/wiki/design-part-page/plasmid.png" class="img-responsive rounded mx-auto d-block mt-4">
 
     <p class="sub-stuff">
       <u>Genetic circuit design:</u><br><br>
@@ -549,7 +549,7 @@
       mechanisms that can be used to increase or decrease the expression or production of specific gene products.
     </p>
 
-    <img style="width: 70%; height: auto;" src="https://static.igem.wiki/teams/4641/wiki/design-part-page/genetic-circuit.jpeg" class="img-responsive rounded mx-auto d-block mt-4">
+    <img style="width: 50%; height: auto;" src="https://static.igem.wiki/teams/4641/wiki/design-part-page/genetic-circuit.jpeg" class="img-responsive rounded mx-auto d-block mt-4">
 
     <figcaption style="text-align:center"> <i> TccA Gene Regulation in Escherichia coli</i> </figcaption>
    
@@ -566,9 +566,9 @@
       transformed.
     </p>
     <!--(Insert image:  transformed plate in DH5alpha)-->
-    <img style="width: 35%; height: auto;" src="https://static.igem.wiki/teams/4641/wiki/dbtl-growth-curves/transformed-plate-in-dh5alpha.jpg"
+    <img style="width: 30%; height: auto;" src="https://static.igem.wiki/teams/4641/wiki/dbtl-growth-curves/transformed-plate-in-dh5alpha.jpg"
       class="img-responsive rounded mx-auto d-block mt-4">
-    <figcaption style="text-align:center"> <i> i(Transformed plate-contains tccA Gibson assembled pET22b+ transformed DH5alpha cells) </i> </figcaption>
+    <figcaption style="text-align:center"> <i> Transformed plate-contains tccA Gibson assembled pET22b+ transformed DH5alpha cells </i> </figcaption>
     <p class="sub-stuff">
       After a confirmatory colony PCR to check the presence of our insert, we transformed the Gibson-assembled plasmid
       into <i> E.coli BL21 </i> and then we moved towards expression studies.
@@ -604,7 +604,7 @@
         </h4>
         <div id="collapse10" class="accordion-collapse collapse show" aria-labelledby="heading10">
           <div class="accordion-body">
-            <img style="width: 70%; height: auto;" src="https://static.igem.wiki/teams/4641/wiki/design-part-page/genetic-circuit.jpeg" class="img-responsive rounded mx-auto d-block mt-4">
+            <img style="width: 50%; height: auto;" src="https://static.igem.wiki/teams/4641/wiki/design-part-page/genetic-circuit.jpeg" class="img-responsive rounded mx-auto d-block mt-4">
             <table border="1" style="font-family: 'Poppins', sans-serif; font-size: 20px; color: #666;">
               <tr>
                 <th>Parameter</th>
@@ -657,7 +657,6 @@
               Our protein = 515 AA (including RBS and PelB)
               <br>
               k<sub>2</sub>
-              <br>
               = 42.56 secs
               <br>
               <b>Protein = 42.56 [mRNA]</b>
@@ -723,10 +722,10 @@
                 <td>0</td>
               </tr>
             </table>
-            <img
+            <img style="width: 45%; height: auto;"
               src="https://static.igem.wiki/teams/4641/wiki/dbtl-growth-curves/concentration-of-substrate-vs-time.jpg"
-              style="img-fluid" style="0.5">
-            <p class="sub-stuff" style="text-align:center;"><i>(Concentration of substrate vs. time)</i></p>
+             class="img-responsive rounded mx-auto d-block mt-4">
+            <p class="sub-stuff" style="text-align:center;"><i>Concentration of substrate vs. time</i></p>
             <p class="sub-stuff">
               <u>Assuming first order kinetics</u><br>
               -r<sub>A</sub>= K(C<sub>A</sub>)<sup>n</sup><br>
@@ -758,8 +757,8 @@
                 <td>-</td>
               </tr>
             </table>
-            <img src="<img src=" https://static.igem.wiki/teams/4641/wiki/dbtl-growth-curves/ln-ca-vs-ln-ra.png"
-              style="img-fluid" style="0.5">
+            <img style="width: 45%; height: auto;" src=" https://static.igem.wiki/teams/4641/wiki/dbtl-growth-curves/ln-ca-vs-ln-ra.png"
+              class="img-responsive rounded mx-auto d-block mt-4">
             <p class="sub-stuff">
               From the above graph, we know that the following data:<br>
               Slope = n = 1.1198 ≈ 1, which implies that it follows first-order kinetics.<br>
@@ -833,8 +832,8 @@
               across the reactor.<br><br>
               The reactor will operate in continuous flow under unsterile conditions.<br><br>
             </p>
-            <img src="https://static.igem.wiki/teams/4641/wiki/dbtl-growth-curves/packed-bed-reactor.png"
-              style="img-fluid">
+            <img style="width: 35%; height: auto;" src="https://static.igem.wiki/teams/4641/wiki/dbtl-growth-curves/packed-bed-reactor.png"
+              class="img-responsive rounded mx-auto d-block mt-4">
           </div>
         </div>
       </div>
@@ -864,8 +863,8 @@
               the top would be introduced to recycle the overflow into the tank. The reactor will operate in
               continuous flow under unsterile conditions.<br><br>
             </p>
-            <img src="https://static.igem.wiki/teams/4641/wiki/dbtl-growth-curves/stirred-tank-reactor.png"
-              style="img-fluid">
+            <img style="width: 35%; height: auto;" src="https://static.igem.wiki/teams/4641/wiki/dbtl-growth-curves/stirred-tank-reactor.png"
+              class="img-responsive rounded mx-auto d-block mt-4">
           </div>
         </div>
       </div>
@@ -888,8 +887,8 @@
               sparger would be added to increase aeration. The rest of the elements would remain the same as in Design
               2. The reactor will be operated in batch mode in unsterile conditions.
             </p>
-            <img src="https://static.igem.wiki/teams/4641/wiki/dbtl-growth-curves/batch-stirred-tank.png"
-              style="img-fluid" style="scale:0.6;">
+            <img style="width: 35%; height: auto;" src="https://static.igem.wiki/teams/4641/wiki/dbtl-growth-curves/batch-stirred-tank.png"
+              class="img-responsive rounded mx-auto d-block mt-4">
           </div>
         </div>
       </div>
@@ -919,8 +918,8 @@
               and maintain the pressure drop across the reactor. The reactor will be operated in batch mode in
               unsterile conditions.
             </p>
-            <img src="https://static.igem.wiki/teams/4641/wiki/dbtl-growth-curves/batch-packed-bed-reactor.png"
-              style="img-fluid">
+            <img style="width: 35%; height: auto;" src="https://static.igem.wiki/teams/4641/wiki/dbtl-growth-curves/batch-packed-bed-reactor.png"
+              class="img-responsive rounded mx-auto d-block mt-4">
           </div>
         </div>
       </div>
@@ -945,7 +944,7 @@
               (air from the sparger). Both of these factors will induce movement of the solid, i.e., the packing
               material. The reactor will operate in continuous flow under unsterile conditions.
             </p>
-            <img src="https://static.igem.wiki/teams/4641/wiki/dbtl-growth-curves/fluidised-bed.png" style="img-fluid">
+            <img style="width: 35%; height: auto;" src="https://static.igem.wiki/teams/4641/wiki/dbtl-growth-curves/fluidised-bed.png" class="img-responsive rounded mx-auto d-block mt-4">
             <p class="sub-stuff">
               <u>Packing Material:</u><br><br>
               The packing material for the packed and fluidized bed is chemically modified biochar with bacteria
@@ -1191,14 +1190,12 @@
     <ul style="font-family: 'Poppins', sans-serif; font-size: 20px; color: #666;">
       <li>
         Experiment 1: 1, 10, 100 ppm (parts per million) of TCC in 5% acetone (standard)
-        <img src="https://static.igem.wiki/teams/4641/wiki/dbtl-growth-curves/raman-spec-1.png" style="img-fluid"
-          style="scale:0.5;">
+        <img style="width: 35%; height: auto;" src="https://static.igem.wiki/teams/4641/wiki/dbtl-growth-curves/raman-spec-1.png" class="img-responsive rounded mx-auto d-block mt-4">
         Figure: Surface Enhanced Raman Spectroscopy of triclocarban dissolved in 5% acetone. (1, 10, 100 ppm)
       </li>
       <li>
         Experiment 2: 1, 10, 100 ppm (parts per million)of TCC in lake water sample
-        <img src="https://static.igem.wiki/teams/4641/wiki/dbtl-growth-curves/raman-spec-2.png" style="img-fluid"
-          style="scale:0.5;" style="img-fluid">
+        <img style="width: 35%; height: auto;" src="https://static.igem.wiki/teams/4641/wiki/dbtl-growth-curves/raman-spec-2.png" class="img-responsive rounded mx-auto d-block mt-4">
         Figure: Surface Enhanced Raman Spectroscopy of triclocarban dissolved in lake water. (1, 10, 100 ppm)
       </li>
     </ul>
