--- a/wiki/pages/engineering.html
+++ b/wiki/pages/engineering.html
@@ -60,6 +60,7 @@
 
 <div class="content">
   <div class="m-2 mb-16">
+    <img style="width: 45%; height: auto;" src="https://static.igem.wiki/teams/4641/wiki/engineering-success-dbtl/module-0.png" class="img-responsive rounded mx-auto d-block mt-4">
     <p class="mt-5 MAIN-STUFF">MODULE 0</p>
     <p class="MAIN-STUFF"><u>Overview: </u></p>
     <p class="sub-stuff">The first module of our DBTL cycle shows how our initial project idea shifted on the basis of
@@ -131,7 +132,7 @@
             <figure>
             <img style="width: 40%; height: auto;"
               src="https://static.igem.wiki/teams/4641/wiki/dbtl-growth-curves/model-which-was-used-for-this-predicted-by-alpha-fold-and-present-in-uniprot.png" class="img-responsive rounded mx-auto d-block mt-4">
-             <figcaption style="text-align:center"> <i>Fig 1: Model which was used for this (predicted by Alpha Fold and present in UniProt)
+             <figcaption style="text-align:center"> <i>Model which was used for this (predicted by Alpha Fold and present in UniProt)
             </i>
       </figcaption>
     </figure>
@@ -584,7 +585,7 @@
     <!--(insert image: SDS gel image)-->
     <figure>
     <img style="width: 35%; height: auto;" src="https://static.igem.wiki/teams/4641/wiki/dbtl-growth-curves/sds-gel-image.png" class="img-responsive rounded mx-auto d-block mt-4">
-    <figcaption style="text-align:center"> <i> Regular meetings held with the team members of IIT Delhi and MIT-MAHE to plan the 3-day bioremediation conclave </i> </figcaption>
+    <figcaption style="text-align:center"> <i>SDS Page</i> </figcaption>
 </figure>
     <p class="sub-stuff">
       <b><u>Genetic circuit</u></b><br><br>
@@ -1166,8 +1167,8 @@
       wavelength for the IR filter and photodiode and built a theoretical set-up that can be employed for the
       detection of TCC.
     </p>
-    <img src="" style="img-fluid">
-    <p class="sub-stuff" style="text-align:center;"><b><i>Figure: Block Diagram of our set-up</i></b></p>
+    <img style="width: 50%; height: auto;" src="https://static.igem.wiki/teams/4641/wiki/engineering-success-dbtl/block-diagram.jpeg" class="img-responsive rounded mx-auto d-block mt-4">
+    <figcaption style="text-align:center"> <i>Block Diagram of our set-up </i> </figcaption>
     <p class="sub-stuff">
       This set-up would include a laser of 785 nanometer monochromatic light, two focal lenses, a mirror with a hole
       to cleanly pass the focused laser, a sample stage (cuvette), an IR filter, a photodiode, and a microcontroller.
