--- a/wiki/pages/project-implementation.html
+++ b/wiki/pages/project-implementation.html
@@ -80,7 +80,8 @@
     </p>
     <img src="https://static.igem.wiki/teams/4641/wiki/implementation/cad-design-of-the-bioreactor-model.jpeg"
       class="img-fluid rounded mx-auto d-block mt-4">
-    <center><b>Fig1:</b>CAD design of the bioreactor</center> <br>
+    <figcaption style="text-align:center"> <i><b>Fig1: </b>CAD design of the bioreactor</i>
+      </figcaption> <br>
     <center><iframe title="MIT-MAHE: Packed Bed Bioreactor (2023) [English]" width="560" height="315"
         src="https://video.igem.org/videos/embed/7445e532-d9e3-47b8-8ed5-1f63aa27cbd4" frameborder="1"
         allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe></center>
@@ -88,7 +89,8 @@
     <br><br>
     <img src="https://static.igem.wiki/teams/4641/wiki/implementation/substrate-spectrum-and-specificity-of-tcca.png"
       class="img-fluid rounded mx-auto d-block mt-4">
-    <center><b>Fig 2:</b>Substrate spectrum and Specificity of TccA [1].</center>
+    <figcaption style="text-align:center"> <i><b>Fig 2: </b>Substrate spectrum and Specificity of TccA [1].</i>
+      </figcaption>
     <br><br>
     <p style="font-family: 'Poppins', sans-serif; font-size: 20px;">Along with the breakdown of TCC, our native amidase
       enzyme TccA has a broad substrate specificity, as shown in <b>Fig 2</b>. This amidase can break down many other
@@ -113,8 +115,9 @@
     <p class="mt-5 MAIN-STUFF" id="section3">Biochar<br></p>
     <img src="https://static.igem.wiki/teams/4641/wiki/implementation/locally-derived-biochar.jpeg"
       class="img-fluid rounded mx-auto d-block mt-4">
-    <center><b>Fig 3:</b>Locally derived biochar from the burning of rice husk and is a waste product of rice mill
-      industries</center>
+    <figcaption style="text-align:center"> <i><b>Fig 3: </b>Locally derived biochar from the burning of rice husk and is a waste product of rice mill
+      industries</i>
+      </figcaption>
     <br><br>
     <p style="font-family: 'Poppins', sans-serif; font-size: 20px;">Biochar is a carbon-rich substance produced by the
       thermal combustion of organic waste in an oxygen-limited environment. Biochar has a high surface area, due to
@@ -164,11 +167,13 @@
     <p class="mt-3 MAIN-STUFF" id="section4">Raschig ring<br></p>
     <img src="https://static.igem.wiki/teams/4641/wiki/implementation/raschig-ring.png"
       class="img-fluid rounded mx-auto d-block mt-4">
-    <center><b>Fig 4:</b>Raschig ring</center>
+    <figcaption style="text-align:center"> <i><b>Fig 4: </b>Raschig ring</i>
+      </figcaption>
     <br><br>
     <img src="https://static.igem.wiki/teams/4641/wiki/implementation/cad-of-raschig-ring.jpeg"
       class="img-fluid rounded mx-auto d-block mt-4">
-    <center><b>Fig 5:</b>Proposed Model of Raschig rings</center>
+    <figcaption style="text-align:center"> <i><b>Fig 5:</b>Proposed Model of Raschig rings</i>
+      </figcaption>
     <br><br>
     <p style="font-family: 'Poppins', sans-serif; font-size: 20px;">The idea for making Biochar Raschig rings developed
       during one of our iHP meetings with Dr. Kamatam Krishnaiah, where we were inspired by the desire to satisfy two
@@ -189,7 +194,8 @@
     </p>
     <img src="https://static.igem.wiki/teams/4641/wiki/implementation/pelletization-system.jpeg"
       class="img-fluid rounded mx-auto d-block mt-4">
-    <center><b>Fig 6:</b>Pelletization system [4]</center>
+    <figcaption style="text-align:center"> <i><b>Fig 6:</b>Pelletization system [4]</i>
+      </figcaption>
     <br><br>
     <p style="font-family: 'Poppins', sans-serif; font-size: 20px;">In <b> Fig 6</b>, the compressive bar will exert
       force on the biochar pellet, forming a ring structure.<br><br>
@@ -268,11 +274,13 @@
     </p>
     <img src="https://static.igem.wiki/teams/4641/wiki/implementation/proposed-model-for-sparger.jpeg"
       class="img-fluid rounded mx-auto d-block mt-4">
-    <center><b>Fig 7:</b>Proposed model for Sparger</center><br><br>
+    <figcaption style="text-align:center"> <i><b>Fig 7:</b>Proposed model for Sparger</i>
+      </figcaption><br><br>
     <p class="mt-3 MAIN-STUFF" id="section6">Pressure Gauge<br></p>
     <img src="https://static.igem.wiki/teams/4641/wiki/implementation/pressure-gauge.jpeg"
       class="img-fluid rounded mx-auto d-block mt-4">
-    <center><b>Fig 8:</b>Proposed Model of Pressure Gauge</center><br><br>
+    <figcaption style="text-align:center"> <i><b>Fig 8:</b>Proposed Model of Pressure Gauge</i>
+      </figcaption><br><br>
     <p style="font-family: 'Poppins', sans-serif; font-size: 20px;">A pressure-powered system uses pressure gauges to
       measure the fluid intensity in the system to ensure there are no leaks or pressure variations that could impair
       the system's functioning. Hence, to ensure the proper functioning of our bioreactor, we would install a
@@ -491,7 +499,8 @@
     </p> <br>
     <img src="https://static.igem.wiki/teams/4641/wiki/implementation/fasta-sequence-kill-switch.png"
       class="img-fluid rounded mx-auto d-block mt-4">
-    <center>FASTA sequence of gene ACIAD1150</center><br><br>
+    <figcaption style="text-align:center"> <i>FASTA sequence of gene ACIAD1150</i>
+      </figcaption><br><br>
     <p style="font-family: 'Poppins', sans-serif; font-size: 20px;">To ensure that this sequence did not exist in any
       other organism, we ran a FASTA search with a higher expectation value and a lower gap penalty. The closest match
       apart from <i>Acinetobacter baylyi</i>, with 90% identity, was found to be <i>Acinetobacter baumannii</i>
@@ -499,8 +508,9 @@
     <br>
     <img src="https://static.igem.wiki/teams/4641/wiki/implementation/similarity-search.png"
       class="img-fluid rounded mx-auto d-block mt-4"> <br>
-    <center>Similarity search of gene ACIAD1150 (Parameters modified to have high expectation value (50) and a lower gap
-      opening penalty (-2) to find more possible matches</center><br><br>
+    <figcaption style="text-align:center"> <i>Similarity search of gene ACIAD1150 (Parameters modified to have high expectation value (50) and a lower gap
+      opening penalty (-2) to find more possible matches</i>
+      </figcaption><br><br>
     <p style="font-family: 'Poppins', sans-serif; font-size: 20px;"> We analyzed the use of <i>Acinetobacter
         baumannii</i> in wastewater treatment plants, to ensure that an off target effect did not occur. After
       conducting a literature review, we can conclude that <i>Acinetobacter baumanii</i> was found to be non essential
@@ -514,7 +524,8 @@
 
     <img src="https://static.igem.wiki/teams/4641/wiki/implementation/tabular-column-kill.png"
       class="img-fluid rounded mx-auto d-block mt-4"> <br>
-    <center>Potential guide RNAs as generated using online tools</center><br><br>
+    <figcaption style="text-align:center"> <i>Potential guide RNAs as generated using online tools</i>
+      </figcaption><br><br>
     <p style="font-family: 'Poppins', sans-serif; font-size: 20px;">To further bolster the stability of our kill switch,
       we will engineer the plasmid carrying the kill switch to be antibiotic-independent for maintenance by using an
       alternative mechanism such as reporter genes, auxotrophic marker and host specific origin of replication. This
