--- a/wiki/pages/project-implementation.html
+++ b/wiki/pages/project-implementation.html
@@ -78,7 +78,7 @@
       <br><br>
     <p class="mt-5 MAIN-STUFF" id="section2">Bioreactor<br></p>
     </p>
-    <img src="https://static.igem.wiki/teams/4641/wiki/implementation/cad-design-of-the-bioreactor-model.jpeg"
+    <img style="width: 35%; height: auto;" src="https://static.igem.wiki/teams/4641/wiki/implementation/cad-design-of-the-bioreactor-model.jpeg"
       class="img-fluid rounded mx-auto d-block mt-4">
     <figcaption style="text-align:center"> <i><b>Fig1: </b>CAD design of the bioreactor</i>
       </figcaption> <br>
@@ -87,7 +87,7 @@
         allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe></center>
     <center>Batch Packed Bed Bioreactor</center><br><br>
     <br><br>
-    <img src="https://static.igem.wiki/teams/4641/wiki/implementation/substrate-spectrum-and-specificity-of-tcca.png"
+    <img style="width: 35%; height: auto;" src="https://static.igem.wiki/teams/4641/wiki/implementation/substrate-spectrum-and-specificity-of-tcca.png"
       class="img-fluid rounded mx-auto d-block mt-4">
     <figcaption style="text-align:center"> <i><b>Fig 2: </b>Substrate spectrum and Specificity of TccA [1].</i>
       </figcaption>
@@ -113,7 +113,7 @@
     </p>
     <br><br><br>
     <p class="mt-5 MAIN-STUFF" id="section3">Biochar<br></p>
-    <img src="https://static.igem.wiki/teams/4641/wiki/implementation/locally-derived-biochar.jpeg"
+    <img style="width: 35%; height: auto;" src="https://static.igem.wiki/teams/4641/wiki/implementation/locally-derived-biochar.jpeg"
       class="img-fluid rounded mx-auto d-block mt-4">
     <figcaption style="text-align:center"> <i><b>Fig 3: </b>Locally derived biochar from the burning of rice husk and is a waste product of rice mill
       industries</i>
@@ -165,14 +165,14 @@
     <br><br><br><br>
 
     <p class="mt-3 MAIN-STUFF" id="section4">Raschig ring<br></p>
-    <img src="https://static.igem.wiki/teams/4641/wiki/implementation/raschig-ring.png"
+    <img style="width: 35%; height: auto;" src="https://static.igem.wiki/teams/4641/wiki/implementation/raschig-ring.png"
       class="img-fluid rounded mx-auto d-block mt-4">
     <figcaption style="text-align:center"> <i><b>Fig 4: </b>Raschig ring</i>
       </figcaption>
     <br><br>
-    <img src="https://static.igem.wiki/teams/4641/wiki/implementation/cad-of-raschig-ring.jpeg"
+    <img style="width: 35%; height: auto;" src="https://static.igem.wiki/teams/4641/wiki/implementation/cad-of-raschig-ring.jpeg"
       class="img-fluid rounded mx-auto d-block mt-4">
-    <figcaption style="text-align:center"> <i><b>Fig 5:</b>Proposed Model of Raschig rings</i>
+    <figcaption style="text-align:center"> <i><b>Fig 5: </b>Proposed Model of Raschig rings</i>
       </figcaption>
     <br><br>
     <p style="font-family: 'Poppins', sans-serif; font-size: 20px;">The idea for making Biochar Raschig rings developed
@@ -192,9 +192,9 @@
       <br><br>
       <u>Biochar Pelletizing Methods [3]:</u>
     </p>
-    <img src="https://static.igem.wiki/teams/4641/wiki/implementation/pelletization-system.jpeg"
+    <img style="width: 35%; height: auto;" src="https://static.igem.wiki/teams/4641/wiki/implementation/pelletization-system.jpeg"
       class="img-fluid rounded mx-auto d-block mt-4">
-    <figcaption style="text-align:center"> <i><b>Fig 6:</b>Pelletization system [4]</i>
+    <figcaption style="text-align:center"> <i><b>Fig 6: </b>Pelletization system [4]</i>
       </figcaption>
     <br><br>
     <p style="font-family: 'Poppins', sans-serif; font-size: 20px;">In <b> Fig 6</b>, the compressive bar will exert
@@ -272,14 +272,14 @@
       pressure will be regulated through the pipe inlets connected from the bottom of the tank and spread across the
       channels, resulting in a uniform distribution. The gas-liquid mass transfer takes place in the tank.
     </p>
-    <img src="https://static.igem.wiki/teams/4641/wiki/implementation/proposed-model-for-sparger.jpeg"
+    <img style="width: 35%; height: auto;" src="https://static.igem.wiki/teams/4641/wiki/implementation/proposed-model-for-sparger.jpeg"
       class="img-fluid rounded mx-auto d-block mt-4">
-    <figcaption style="text-align:center"> <i><b>Fig 7:</b>Proposed model for Sparger</i>
+    <figcaption style="text-align:center"> <i><b>Fig 7: </b>Proposed model for Sparger</i>
       </figcaption><br><br>
     <p class="mt-3 MAIN-STUFF" id="section6">Pressure Gauge<br></p>
-    <img src="https://static.igem.wiki/teams/4641/wiki/implementation/pressure-gauge.jpeg"
+    <img style="width: 35%; height: auto;" src="https://static.igem.wiki/teams/4641/wiki/implementation/pressure-gauge.jpeg"
       class="img-fluid rounded mx-auto d-block mt-4">
-    <figcaption style="text-align:center"> <i><b>Fig 8:</b>Proposed Model of Pressure Gauge</i>
+    <figcaption style="text-align:center"> <i><b>Fig 8: </b>Proposed Model of Pressure Gauge</i>
       </figcaption><br><br>
     <p style="font-family: 'Poppins', sans-serif; font-size: 20px;">A pressure-powered system uses pressure gauges to
       measure the fluid intensity in the system to ensure there are no leaks or pressure variations that could impair
@@ -497,7 +497,7 @@
       Thus, they found that the pyrC gene is really crucial for the survival of the bacterium [22].
       <br>We obtained the sequence of the ACIAD1150 from the <i>Actinobacter baylyi</i> genome database[23].
     </p> <br>
-    <img src="https://static.igem.wiki/teams/4641/wiki/implementation/fasta-sequence-kill-switch.png"
+    <img style="width: 35%; height: auto;" src="https://static.igem.wiki/teams/4641/wiki/implementation/fasta-sequence-kill-switch.png"
       class="img-fluid rounded mx-auto d-block mt-4">
     <figcaption style="text-align:center"> <i>FASTA sequence of gene ACIAD1150</i>
       </figcaption><br><br>
@@ -506,7 +506,7 @@
       apart from <i>Acinetobacter baylyi</i>, with 90% identity, was found to be <i>Acinetobacter baumannii</i>
       [24].<br></p>
     <br>
-    <img src="https://static.igem.wiki/teams/4641/wiki/implementation/similarity-search.png"
+    <img style="width: 35%; height: auto;" src="https://static.igem.wiki/teams/4641/wiki/implementation/similarity-search.png"
       class="img-fluid rounded mx-auto d-block mt-4"> <br>
     <figcaption style="text-align:center"> <i>Similarity search of gene ACIAD1150 (Parameters modified to have high expectation value (50) and a lower gap
       opening penalty (-2) to find more possible matches</i>
@@ -522,7 +522,7 @@
     </p>
     <br>
 
-    <img src="https://static.igem.wiki/teams/4641/wiki/implementation/tabular-column-kill.png"
+    <img style="width: 35%; height: auto;" src="https://static.igem.wiki/teams/4641/wiki/implementation/tabular-column-kill.png"
       class="img-fluid rounded mx-auto d-block mt-4"> <br>
     <figcaption style="text-align:center"> <i>Potential guide RNAs as generated using online tools</i>
       </figcaption><br><br>
